# CISC-472

./: Kyle.py  README.md  SlicerScripts.py
Kyle/: CMakeLists.txt
Kyle/Kyle/: CMakeLists.txt  Kyle.py
